fix nav button spacing

--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -19,6 +19,10 @@ nav {
   margin-right: 20px;
 }
 
+nav button {
+  margin-right: 5px;
+}
+
 #welcome-user {
   vertical-align: middle;
   font-size: 1.25rem;
